--- a/index.html
+++ b/index.html
@@ -61,13 +61,11 @@
 
         <ul>
             <p style="font-family: 'Pacifico', cursive;">MineRPG</p>
-            <li><a href="" target="_blank">Mate o Guardião!! - Pt.1 (04/12/20)</a></li>
-            <li><a href="" target="_blank">Mate o Guardião!! - Pt.2 (04/12/20)</a></li>
-            <li><a href="" target="_blank">Mate o Guardião!! - Pt.3 (14/12/20)</a></li>
+            <li><a href="https://youtu.be/Gx8hMB1yaI0" target="_blank">Mate o Guardião!! - Pt.1 (04/12/20)</a></li>
+            <li><a href="https://youtu.be/wmbUwBZJwfM" target="_blank">Mate o Guardião!! - Pt.2 (04/12/20)</a></li>
 
             <p style="font-family: 'Pacifico', cursive;">BedWars</p>
-            <li><a href="" target="_blank">Partidas do Dia 07/12/2020 (Pt.1)</a></li>
-            <li><a href="" target="_blank">Partidas do Dia 07/12/2020 (Pt.2)</a></li>
+            <li><a href="https://youtu.be/c8tDcFOOE-U" target="_blank">Partidas do Dia 07/12/2020</a></li>
         </ul>
 
     </aside>
